# Beira

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  config.example.json  config.example.toml  config.json  config.py  config_example.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: coverage_and_lint.yml
cogs/: admin.py  help-alpha.py  help.py  slash_test.py  snowball.py
core/: __init__.py  bot.py  checks.py  config.py  context.py  errors.py  tree.py  wave.py
core/utils/: __init__.py  app_help_test.py  custom_logging.py  db.py  embeds.py  emojis.py  log.py  misc.py  pagination.py
data/: fandom_wiki_data.json  patreon_tier_data.json  snowball_embed_data.json
data/story_text/: pop_book1.md  pop_book2.md
data/story_text/aci100/: aoc_text.md  cop_text.md  fof_text.md  pop_all_books.md  pop_text.md
data/story_text/aci100/cop/: cop_all_books.md
data/story_text/aci100/pop/: pop_book2.md  pop_book3.md
data/story_text/mjbradley/: acvr_text.md
database/: schema.sql
exts/: __init__.py  _dev.py  _jishaku.py  admin.py  ai_generation.py  basic_commands.py  bot_stats.py  custom_notifications.py  dice.py  emoji_ops.py  fandom_wiki.py  ff_metadata.py  help.py  lol.py  misc.py  music.py  music_voice.py  patreon.py  pin_archive.py  presence.py  snowball.py  starkid.py  story_search.py  tatsu.py  tatsu_graphs.py  timing.py  todo.py  webhook_logging.py
exts/_dev/: __init__.py  _dev.py  _test.py  app_invoke.py
exts/ai_generation/: __init__.py  ai_generation.py  ai_utils.py  utils.py
exts/cogs/: admin.py  ai_generation.py  basic_commands.py  bot_stats.py  chess.py  custom_notifications.py  dunk.py  emoji_ops.py  fandom_wiki.py  fandom_wiki_search.py  ff_metadata.py  help.py  lol.py  music_voice.py  patreon.py  patreon_check.py  pin_archive.py  slash_test.py  snowball.py  starkid.py  story_search.py  voice_test.py
exts/ff_metadata/: __init__.py  ff_metadata.py  utils.py
exts/music/: __init__.py  music.py  utils.py  wavelink_utils.py
exts/notifications/: __init__.py  aci_notifications.py  other_triggers.py  rss_notifications.py
exts/snowball/: __init__.py  cooldowns.py  snow_text.py  snowball.py  utils.py
exts/utils/: paginated_embed_view.py  sb_utils.py  snowball_utils.py  story_embed.py
fanfic_wrappers/: atlas_test.py  atlas_wrapper.py  ff_metadata_classes.py  ffmetadata.py  fichub_wrapper.py  test_atlas.py  test_fichub.py
misc/: chapter_links.txt
scripts/: search_output.txt  wordpress_search.py
src/beira/: __init__.py  __main__.py  bot.py  checks.py  config.py  errors.py  scheduler.py  tree.py
src/beira/exts/: __init__.py  _dev.py  _test.py  admin.py  bot_stats.py  dice.py  emoji_ops.py  fandom_wiki.py  ff_metadata.py  help.py  lol.py  music.py  other.py  patreon.py  presence.py  starkid.py  story_search.py  timing.py  todo.py  webhook_logging.py
src/beira/exts/ff_metadata/: __init__.py  ff_metadata.py  utils.py
src/beira/exts/snowball/: __init__.py  snowball.py  utils.py
src/beira/exts/triggers/: __init__.py  misc_triggers.py  rss_notifications.py
src/beira/utils/: db.py  embeds.py  emojis.py  log.py  misc.py  pagination.py  scheduler.py
src/beira/utils/extras/: formats.py  scheduler.py  time.py
typings/: ruff.toml
typings/parsedatetime/: __init__.pyi  context.pyi  warns.pyi
typings/parsedatetime/pdt_locales/: __init__.pyi  base.pyi  icu.pyi
utils/: bot_utils.py  checks.py  converters.py  custom_logging.py  db_funcs.py  db_utils.py  embeds.py  errors.py  log.py  paginated_embed_view.py  paginated_views.py  pagination.py  snowball_utils.py  utils.py  wavelink_utils.py
